Do code cleanup in ZipFilesTest